--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,6 @@
 	</title>
 </head>
 <body>
-		<h1>Hello Coursera! It's a great course.<h1>
+		<h1>Hello Coursera! It's a great course. This looks like it is on main!<h1>
 </body>
 </html>
